# api-tests

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini
src/: asserts.py  check.py  generate.py
src/api/: helper.py  http_client.py
src/api/pet/: pet_client.py  pet_helper.py
src/api/store/: store_client.py  store_helper.py
src/api/user/: user_client.py  user_helper.py
src/config/: config.py  consts.py
src/models/: api_response.py  category.py  order.py  pet.py  tags.py  user.py
tests/: test_login.py  test_orders.py  test_store.py
